# One-Shot--Last_Minute_Exam_Preparation_Platform

./: .gitignore  Readme.md  config.py  document_processor.py  llmembedding_setup.py  main.py  pinecone_setup.py  prompts.py  requirements.txt  ui_components.py
exam_platform/backend/: langchain_pipeline.py  main.py  pinecone_utils.py  pyproject.toml
exam_platform/frontend/: package-lock.json  package.json
exam_platform/frontend/src/: App.jsx
exam_platform/frontend/src/components/: ExamComponent.css  ExamComponent.jsx
video-call/: README.md  package-lock.json  package.json  server.js
video-call/app/: index.html
video-call/public/css/: style.css
video-call/public/js/: main.js
xai/: document_processor.py  main.py  pinecone_setup.py  prompts.py  summaria_utils.py  ui_components.py
